@startuml
!include _theme.puml
title Modele physique des donnees - Securite
hide methods
hide stereotypes
left to right direction

entity roles {
  * id : BIGINT <<PK>>
  --
  * nom : VARCHAR(30) <<UQ>>
  description : VARCHAR(255)
  * date_creation : TIMESTAMP
  * date_modification : TIMESTAMP
  created_by : VARCHAR(150)
  updated_by : VARCHAR(150)
}

entity utilisateurs {
  * id : BIGINT <<PK>>
  --
  * matricule : VARCHAR(50) <<UQ>>
  * nom : VARCHAR(100)
  * prenom : VARCHAR(100)
  * email : VARCHAR(150) <<UQ>>
  * mot_de_passe : VARCHAR(255)
  * sel : VARCHAR(64)
  * doit_changer_mot_de_passe : BOOLEAN
  telephone : VARCHAR(20)
  direction : VARCHAR(100)
  service : VARCHAR(100)
  region : VARCHAR(100)
  * statut : VARCHAR(20)
  * role_id : BIGINT <<FK>>
  * date_creation : TIMESTAMP
  * date_modification : TIMESTAMP
  created_by : VARCHAR(150)
  updated_by : VARCHAR(150)
}

entity journal_actions {
  * id : BIGINT <<PK>>
  --
  * username : VARCHAR(150)
  * timestamp : TIMESTAMP
  * module : VARCHAR(50)
  * action : VARCHAR(50)
  entity_name : VARCHAR(100)
  entity_id : BIGINT
  old_value : TEXT
  new_value : TEXT
  ip_address : VARCHAR(50)
}

roles ||--o{ utilisateurs : role_id
utilisateurs ..> journal_actions : username / action

note bottom of utilisateurs
  Index : email, matricule, statut, role_id
  Contraintes : email et matricule uniques
end note

note bottom of journal_actions
  Index : timestamp, module, action, username
  Table append-only pour la tracabilite
end note
@enduml

